--- a/plutus-book/doc/plutus.adoc
+++ b/plutus-book/doc/plutus.adoc
@@ -1,5 +1,5 @@
 = Plutus
-:authors: Lars Bruenjes, Polina Vinogradova
+:authors: Lars Brünjes, Polina Vinogradova
 :email: plutus@iohk.io
 :orgname: IOHK
 :doctype: book
