--- a/plutus-book/doc/off-chain/payToWallet2.adoc
+++ b/plutus-book/doc/off-chain/payToWallet2.adoc
@@ -5,7 +5,7 @@
 {-# LANGUAGE TemplateHaskell                 #-}
 {-# OPTIONS_GHC -fno-warn-missing-signatures #-}
 
-module PayToWalletSimple where
+module OffChain.PayToWalletSimple where
 
 import Language.PlutusTx.Prelude
 import Ledger
