--- a/plutus-book/doc/game/game.adoc
+++ b/plutus-book/doc/game/game.adoc
@@ -59,3 +59,23 @@ image:../images/guessing-game-actions.png[]
 As a result, wallet #3 would end up with the reward.
 
 image:../images/guessing-game-result.png[]
+
+What will happen on the blockchain when these actions are performed?
+
+When wallet #1 executes `lock`, a transaction `tx 1` will be submitted to the
+blockchain, successfully be validated (provided Wallet #1 owns at least 5 Ada)
+and incorporated into a block. As input, the transaction will have one or more
+utxo's belonging to Wallet #1 with total value at least 5 Ada. As output,
+the transaction will have one utxo at the game script address with value 5 Ada
+and data script containing the hash of "Haskell". There might also be another output
+for the change.
+
+Then wallet #2 submits a transaction `tx 2` with input the newly created script
+output and output its own public key. However, because the wrong redeemer
+"Scala" is used, this transaction will fail to validate.
+
+Finally wallet #3 submits a transaction `tx 3` with input the script output and
+outputs its own public key, and this transaction will be successfully validated,
+because it uses the correct redeemer "Haskell":
+
+image:../images/guessing-game-txs.png[]
